Todos html -> video size mobile

--- a/kindergarten.html
+++ b/kindergarten.html
@@ -99,165 +99,165 @@
             </div>
         </nav>
     </header>
-<!-- HEADER-->
+    <!-- HEADER-->
 
-<!--main-->
-    <section id="main">
-        <div class="container">
-            <div class="row pb-5 pt-5 d-flex align-items-center">
-                <div class="col-12 col-lg-6 text-left align-self-center">
-                    <div class="text-uppercase">
-                        <small>Atrevete a vivir</small>
-                        <h2>Kindergarten</h2>
-                    </div>
-                    <div class="text-justify">
-                        <p>La etapa preescolar permite que los pequeños aprendan jugando, cantando, indagando, bailando, siendo niños felices 
-                        y seguros de sí mismos.</p>
-                        <p> Nuestro programa bilingüe impulsa de forma natural el aprendizaje del idioma inglés y español. Mitad del día en español y mitad del día en inglés. 
-                        A través de actividades divertidas en el Aula, Biblioteca y Sala de Música.</p>
-                        <p>A través de la actividad física y dinámicas en el aula<span id="dots">...</span><span id="more">, los alumnos desarrollan funciones mentales como son la memoria, imaginación, 
-                        atención, desarrollo del lenguaje, formando su confianza, seguridad y autonomía.
-                        <br>
-                        <br>
-                        Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y auto confianza del niño, 
-                        además de ejercitar los músculos, la coordinación motora, el sistema circulatorio y respiratorio.
-                        <br>
-                        <br>
-                        <small>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</small></span>
-                        </p>
-                    </div>
-                    <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
-
-                </div>
-                <div class="col-12 col-lg-6 m-0 p-0">
-                    <img src="images/Kinder-0.png" class="img-fluid rounded-sm" alt="Responsive image">
-                </div>
-            </div>
-        </div>
-    </section>
-<!--main-->
-
-<hr>
-
-<!--OTO-->
-    <section class="text-center my-5">
-            <!-- Section heading -->
-            <div class=" my-5">
-            <h2 class="h1-responsive font-weight-bold">La enseñanza a través de la diversión</h2>
-            <p class="page-description text-center">Todos los pequeños se divierten a través de las siguientes clases.</p>
-        </div>
+    <!--main-->
+        <section id="main">
             <div class="container">
-                <!-- Grid row -->
-                <div class="row pb-3">
-                    <!-- Grid column -->
-                    <div class="col-12 col-sm-6 col-lg">
-                        <img src="images/natacion.png" alt="" style="max-width:60%;">
-                        <h5 class="font-weight-bold mt-2">Natación</h5>
+                <div class="row pb-5 pt-5 d-flex align-items-center">
+                    <div class="col-12 col-lg-6 text-left align-self-center">
+                        <div class="text-uppercase">
+                            <small>Atrevete a vivir</small>
+                            <h2>Kindergarten</h2>
+                        </div>
+                        <div class="text-justify">
+                            <p>La etapa preescolar permite que los pequeños aprendan jugando, cantando, indagando, bailando, siendo niños felices 
+                            y seguros de sí mismos.</p>
+                            <p> Nuestro programa bilingüe impulsa de forma natural el aprendizaje del idioma inglés y español. Mitad del día en español y mitad del día en inglés. 
+                            A través de actividades divertidas en el Aula, Biblioteca y Sala de Música.</p>
+                            <p>A través de la actividad física y dinámicas en el aula<span id="dots">...</span><span id="more">, los alumnos desarrollan funciones mentales como son la memoria, imaginación, 
+                            atención, desarrollo del lenguaje, formando su confianza, seguridad y autonomía.
+                            <br>
+                            <br>
+                            Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y auto confianza del niño, 
+                            además de ejercitar los músculos, la coordinación motora, el sistema circulatorio y respiratorio.
+                            <br>
+                            <br>
+                            <small>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</small></span>
+                            </p>
+                        </div>
+                        <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
+
                     </div>
-                    <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-12 col-sm-6 col-lg">
-                        <img src="images/educacion-fisica.png" alt="" style="max-width:60%;">
-                        <h5 class="font-weight-bold mt-2">Educación Física</h5>
+                    <div class="col-12 col-lg-6 m-0 p-0">
+                        <img src="images/Kinder-0.png" class="img-fluid rounded-sm" alt="Responsive image">
                     </div>
-                    <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-12 col-sm-6 col-lg">
-                        <img src="images/computacion.png" alt="" style="max-width:60%;">
-                        <h5 class="font-weight-bold mt-2">Computación</h5>
-                    </div>
-                    <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-12 col-sm-6 col-lg">
-                        <img src="images/biblioteca.png" alt="" style="max-width:60%;">
-                        <h5 class="font-weight-bold mt-2">Biblioteca</h5>
-                    </div>
-                    <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-12 col-sm-6 col-lg mb-4">
-                        <img src="images/ritmo-y-movimiento.png" alt="" style="max-width:60%;">
-                        <h5 class="font-weight-bold mt-2">Ritmo y Movimiento</h5>
-                    </div>
-                    <!-- Grid column -->
                 </div>
-                <!-- Grid row -->
             </div>
-    </section>
-<!--OTO-->
-<div class="container">
-    <div class="row my-5 py-5">
-        <div class="wrapper">
-            <div class="col iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/j2qxymfNayk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+    <!--main-->
+
+    <hr>
+
+    <!--OTO-->
+        <section class="text-center my-5">
+                <!-- Section heading -->
+                <div class=" my-5">
+                <h2 class="h1-responsive font-weight-bold">La enseñanza a través de la diversión</h2>
+                <p class="page-description text-center">Todos los pequeños se divierten a través de las siguientes clases.</p>
+            </div>
+                <div class="container">
+                    <!-- Grid row -->
+                    <div class="row pb-3">
+                        <!-- Grid column -->
+                        <div class="col-12 col-sm-6 col-lg">
+                            <img src="images/natacion.png" alt="" style="max-width:60%;">
+                            <h5 class="font-weight-bold mt-2">Natación</h5>
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-12 col-sm-6 col-lg">
+                            <img src="images/educacion-fisica.png" alt="" style="max-width:60%;">
+                            <h5 class="font-weight-bold mt-2">Educación Física</h5>
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-12 col-sm-6 col-lg">
+                            <img src="images/computacion.png" alt="" style="max-width:60%;">
+                            <h5 class="font-weight-bold mt-2">Computación</h5>
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-12 col-sm-6 col-lg">
+                            <img src="images/biblioteca.png" alt="" style="max-width:60%;">
+                            <h5 class="font-weight-bold mt-2">Biblioteca</h5>
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-12 col-sm-6 col-lg mb-4">
+                            <img src="images/ritmo-y-movimiento.png" alt="" style="max-width:60%;">
+                            <h5 class="font-weight-bold mt-2">Ritmo y Movimiento</h5>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+        </section>
+    <!--OTO-->
+    <div class="container">
+        <div class="row  d-flex justify-content-center">
+            <div class="col-12 col-lg-6 d-flex align-items-center wrapper my-4">
+                <div class="col iframe-container">
+                    <iframe width="460" height="300" src="https://www.youtube.com/embed/j2qxymfNayk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 
-<hr>
+    <hr>
 
-<!--galeria-->
-    <section>
-        <div class="container gallery-container pb-5">
-            <h1 class="text-center pt-4">Kindergarten School Life</h1>
-            <p class="page-description text-center">Momentos Anglo</p>
-            <div class="tz-gallery">
-                <div class="row ">
-                    <div class="col-md-4">
-                        <div class="card mb-3">
-                            <a class="lightbox" href="images/kinder-2.png">
-                                <img src="images/kinder-2.png" alt="Park" class="card-img-top rounded-sm">
-                            </a>
+    <!--galeria-->
+        <section>
+            <div class="container gallery-container pb-5">
+                <h1 class="text-center pt-4">Kindergarten School Life</h1>
+                <p class="page-description text-center">Momentos Anglo</p>
+                <div class="tz-gallery">
+                    <div class="row ">
+                        <div class="col-md-4">
+                            <div class="card mb-3">
+                                <a class="lightbox" href="images/kinder-2.png">
+                                    <img src="images/kinder-2.png" alt="Park" class="card-img-top rounded-sm">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mb-3">
+                                <a class="lightbox" href="images/kinder-3.png">
+                                    <img src="images/kinder-3.png" alt="Park" class="card-img-top rounded-sm">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card mb-3">
+                                <a class="lightbox" href="images/kinder-4.png">
+                                    <img src="images/kinder-4.png" alt="Park" class="card-img-top rounded-sm">
+                                </a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card mb-3">
-                            <a class="lightbox" href="images/kinder-3.png">
-                                <img src="images/kinder-3.png" alt="Park" class="card-img-top rounded-sm">
-                            </a>
+                    <div class="row mb-3">
+                        <div class="col-md-4">
+                            <div class="card mb-3">
+                                <a class="lightbox" href="images/kinder-5.png">
+                                    <img src="images/kinder-5.png" alt="Park" class="card-img-top rounded-sm">
+                                </a>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="card mb-3">
-                            <a class="lightbox" href="images/kinder-4.png">
-                                <img src="images/kinder-4.png" alt="Park" class="card-img-top rounded-sm">
-                            </a>
+                        <div class="col-md-4">
+                            <div class="card mb-3">
+                                <a class="lightbox" href="images/kinder-6.png">
+                                    <img src="images/kinder-6.png" alt="Park" class="card-img-top rounded-sm">
+                                </a>
+                            </div>
                         </div>
+
+                        <div class="col-md-4">
+                            <div class="card mb-3">
+                                <a class="lightbox" href="images/Kinder-7.png">
+                                    <img src="images/Kinder-7.png" alt="Park" class="card-img-top rounded-sm">
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-                <div class="row mb-3">
-                    <div class="col-md-4">
-                        <div class="card mb-3">
-                            <a class="lightbox" href="images/kinder-5.png">
-                                <img src="images/kinder-5.png" alt="Park" class="card-img-top rounded-sm">
-                            </a>
-                        </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="card mb-3">
-                            <a class="lightbox" href="images/kinder-6.png">
-                                <img src="images/kinder-6.png" alt="Park" class="card-img-top rounded-sm">
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card mb-3">
-                            <a class="lightbox" href="images/Kinder-7.png">
-                                <img src="images/Kinder-7.png" alt="Park" class="card-img-top rounded-sm">
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
             </div>
-
-        </div>
-    </section>
-<!--Galeria-->
+        </section>
+    <!--Galeria-->
 
     <!--Extensiones niveles-->
     <div id="nav" class="nav pt-3" >
@@ -374,8 +374,8 @@
     </footer>
     <!--FOOTER-->
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
