--- a/bachillerato.html
+++ b/bachillerato.html
@@ -185,10 +185,10 @@
     <!--OTO-->
 
     <div class="container">
-        <div class="row my-5 py-5">
-            <div class="wrapper">
+        <div class="row pb-5 pt-5 d-flex justify-content-center">
+            <div class="col-12 col-lg-6 d-flex align-items-center wrapper my-4">
                 <div class="col iframe-container">
-                    <iframe class="videos" width="560" height="315" src="https://www.youtube.com/embed/9Zqc6sXTWqU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="460" height="300" src="https://www.youtube.com/embed/9Zqc6sXTWqU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
