--- a/index.html
+++ b/index.html
@@ -160,11 +160,10 @@
     <!--Videos-->
         <section>
             <div class="container">
-                <div class="row mt-5 pt-2">
-                    <div class="wrapper">
+                <div class="row pb-5 pt-5 d-flex justify-content-center">
+                    <div class="col-12 col-lg-6 d-flex align-items-center wrapper my-4">
                         <div class="col iframe-container">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/F5SFznI56jQ" frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="460" height="300" src="https://www.youtube.com/embed/F5SFznI56jQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
