Inscripciones -> contactanos y Modelo -> Amco texto

--- a/inscripciones.html
+++ b/inscripciones.html
@@ -195,17 +195,18 @@
                 <img src="images/service.svg" class="img-fluid rounded-sm" alt="Responsive image" style="max-width: 60%;">
             </div>
             <div class="col-12 col-md-6 text-left align-self-center">
-                <div class="text-uppercase text-center">
+                <div class="text-uppercase">
                     <h2>Contáctanos</h2>
+                    <h5>Y agenda tu cita con nosotros</h5>
                 </div>
                 <div>
-                    <h5 class="font-weight-normal">La etapa Preuniversitaria forma parte importante para un gran futuro.</h5>
+                    <p class="font-weight-normal">Escríbenos por WhatsApp y con gusto te brindaremos la información solicitada</p>
                 </div>
-                <div class="text-justify">
+                <!-- <div class="text-justify">
                     <p>Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
                     herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
                     personal, universitario y profesional.</p>
-                </div>
+                </div> -->
                 <a href="https://wa.link/h4zyli" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block"><i class="fab fa-whatsapp fa-s fa-1x mx-3"></i>Más información</button></a>
             </div>
         </div>
