--- a/modelo.html
+++ b/modelo.html
@@ -244,8 +244,11 @@
         <div class="row pb-5 pt-3 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
-                   <p>Amco es un sistema integral de enseñanza, el cual está basado en las teorías de la Voz Generadora, Inteligencias Múltiples e Inteligencia Emocional que permite a nuestros alumnos generar aprendizajes significativos mediante un enfoque natural, el trabajo colaborativo y el estímulo de la curiosidad por investigar y descubrir.
-                    Amco desarrolla recursos y metodologías que se adaptan de una manera natural y eficiente a los requerimientos de las nuevas generaciones, dándoles una experiencia de felicidad, amistad, aprendizaje, confianza, cariño y respeto.
+                   <p>Amco es una metodología integral e innovadora en la educación que nos permite crear una atmósfera de aprendizaje en la que el alumno genera aprendizajes significativos mediante el enfoque natural, el estímulo de la curiosidad para investigar y descubrir, las inteligencias múltiples, el trabajo colaborativo y el uso de estrategias y recursos digitales que mejor se adapten.
+                    <br>
+                    <br>
+ 
+                    Con base a la teoría de la Voz Generadora, trabajamos arduamente para que el alumno se exprese y comunique desarrollando las cuatro habilidades: Listening, Reading, Writing y Speaking. La enseñanza del idioma no sólo se limita a hablarlo; Amco concede a los alumnos la oportunidad de conocer a su gente, costumbres, cultura e historia de sus pueblos y de todo el mundo a través del idioma inglés.
                     </p>
                 </div>
                 <a href="https://www.amco.me/" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Ir a Amco</button></a>
