Bachillerato, campus, exalumnos, extraescolares, jindergarten, modelo, primaria, secundaria -> detalles

--- a/campus.html
+++ b/campus.html
@@ -105,9 +105,9 @@
                 <div class="col-12 col-lg-6">
                     <div class="mb-5">
                         <h2>Nuestras instalaciones</h2>
-                        <p>Colegio Anglo se encuentra ubicado en una zona residencial céntrica, dentro de una extensión
-                            de dos hectáreas que albergan
-                            Kindergarten, Primaria, Secundaria y Bachillerato.</p>
+                        <p>El Colegio Anglo se encuentra ubicado en una zona residencial céntrica, dentro de una extensión
+                        de dos hectáreas que albergan
+                        Kindergarten, Primaria, Secundaria y Bachillerato.</p>
                     </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                             <li class="list-group-item">Aula makersteam</li>
                             <li class="list-group-item">Biblioteca</li>
                             <li class="list-group-item">Laboratorio de Ciencias</li>
-                            <li class="list-group-item">Laboratorios de Computo</li>
+                            <li class="list-group-item">Laboratorios de Cómputo</li>
                             <li class="list-group-item">Sala de Artes y Música</li>                           
                             <li class="list-group-item">Salas multimedia y usos múltiples</li>
                             <li class="list-group-item">Sala de estimulación temprana (PreKinder)</li>
@@ -169,7 +169,7 @@
                             <li class="list-group-item">Canchas de Squash</li>
                             <li class="list-group-item">Áreas verdes</li>
                             <li class="list-group-item">Áreas de juegos para Primaria</li>
-                            <li class="list-group-item">Área de juegos para PreKinder y Kinder</li>
+                            <li class="list-group-item">Área de juegos para PreKinder y Kindergarten</li>
                         </ul>
                 </div>
                 <div class="col-12 col-lg-6 align-self-center">
@@ -183,8 +183,8 @@
 <!--galeria-->
     <section>
         <div class="container gallery-container pb-5">
-            <h1 class="text-center">Instalaciones Anglo</h1>
-            <p class="page-description text-center">Galería</p>
+            <h1 class="text-center">Instalaciones</h1>
+            <p class="page-description text-center">Momentos Anglo</p>
             <div class="tz-gallery">
                 <div class="row">
                     <div class="col-md-4">
