--- a/exalumnos.html
+++ b/exalumnos.html
@@ -120,15 +120,12 @@
         <section>
             <div class="container">
                 <div class="row my-4">
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 text-center">
                         <h2>Impulsa la comunidad Anglo</h2>
-                        <p>Queremos que que compartas tu experiencia, conocimientos y apoyes a las nuevas generaciones a desarrollar habilidades y conocimientos. </p>
+                        <p>Comparte tu experiencia con nosotros. Transmite tus conocimientos e impulsa a las nuevas generaciones a desarrollar nuevas habilidades y conocimientos.</p>
                         <h3>¿Aceptas el reto?</h3>
-                        <p>Escribenos a <a href="mailto: exalumnos@colegioanglo.mx">exalumnos@colegioanglo.mx</a></p>
+                        <p>Escríbenos a <a href="mailto: exalumnos@colegioanglo.mx">exalumnos@colegioanglo.mx</a></p>
                     </div>
-                    <figure class="col-12 col-md-6 figure">
-                        <img src="images/graduates.png" alt="" class="mw-100">
-                    </figure>
                 </div>
             </div>
         </section>
