--- a/extraescolares.html
+++ b/extraescolares.html
@@ -107,7 +107,7 @@
         <div class="row pb-0 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-lef">
                 <div class="text-justify">
-                <p>Es un espacio vespertino seguro, amigable y divertido en el que los alumnos del Colegio practican disciplinas deportivas de su preferencia y fortalecen estilos de vida saludable, como parte fundamental de la formación integral que brindael Anglo.</p>
+                <p>Es un espacio vespertino seguro, amigable y divertido en el que los alumnos del Colegio practican disciplinas deportivas de su preferencia y fortalecen estilos de vida saludable, como parte fundamental de la formación integral que brinda el Anglo.</p>
                 </div>
             
             </div>
@@ -130,7 +130,7 @@
                 <!-- Grid column -->
                 <div class="col-md">
                     <img src="images/basquetbol.png" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Basquetbol</h5>
+                    <h5 class="font-weight-bold mt-2">Básquetbol</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
@@ -143,7 +143,7 @@
                 <!-- Grid column -->
                 <div class="col-md">
                     <img src="images/Futbol.png" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Futbol</h5>
+                    <h5 class="font-weight-bold mt-2">Fútbol</h5>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -155,7 +155,7 @@
                 <!-- Grid column -->
                 <div class="col-md">
                     <img src="images/Voleybol.png" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Voleybol</h5>
+                    <h5 class="font-weight-bold mt-2">Voleibol</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
