--- a/kindergarten.html
+++ b/kindergarten.html
@@ -107,7 +107,7 @@
                 <div class="row pb-5 pt-5 d-flex align-items-center">
                     <div class="col-12 col-lg-6 text-left align-self-center">
                         <div class="text-uppercase">
-                            <small>Atrevete a vivir</small>
+                            <small>Atrévete a vivir</small>
                             <h2>Kindergarten</h2>
                         </div>
                         <div class="text-justify">
@@ -119,11 +119,11 @@
                             atención, desarrollo del lenguaje, formando su confianza, seguridad y autonomía.
                             <br>
                             <br>
-                            Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y auto confianza del niño, 
+                            Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y autoconfianza del niño, 
                             además de ejercitar los músculos, la coordinación motora, el sistema circulatorio y respiratorio.
                             <br>
                             <br>
-                            <small>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</small></span>
+                            <small>Incorporada a la SEP (Secretaría de Educación Pública) y contamos con la certificación de Bachillerato Internacional IB en el Programa de la Escuela Primaria (PEP).</small></span>
                             </p>
                         </div>
                         <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
