--- a/modelo.html
+++ b/modelo.html
@@ -274,7 +274,7 @@
 
                     <br><br>
 
-                    La finalidad del modelo STEAM y el Laboratorio MakerSTEAM es proveer a los alumnos con herramientas para afrontar con éxito los retos de la era digital, aplicando sus conocimiento adquiridos en clases en Proyectos tecnológicos, científicos y de ingeniería.
+                    La finalidad del modelo STEAM y el Laboratorio makersteam es proveer a los alumnos con herramientas para afrontar con éxito los retos de la era digital, aplicando sus conocimiento adquiridos en clases en Proyectos tecnológicos, científicos y de ingeniería.
                     <br><br>
 
                    </p>
