--- a/primaria.html
+++ b/primaria.html
@@ -108,15 +108,14 @@
             <div class="row pb-5 pt-5 d-flex align-items-center">
                 <div class="col-12 col-lg-6 text-left align-self-center mb-4">
                     <div class="text-uppercase">
-                        <small>Atrevete a vivir</small>
+                        <small>Atrévete a vivir</small>
                         <h2>Primaria</h2>
                     </div>
                     <div class="text-justify">
-                        <p>En primaria consideramos al alumno como indagador, que  aprende de forma creativa y experimental a través de las 
-                        actividades y dinámicas que le permiten construir su propio significado de los conocimientos adquiridos para convertirlos en aprendizajes perdurables.</p>
-                        </p>El <strong>modelo bilingüe</strong>, mitad del día en español y mitad del día en inglés, impulsa los principios y valores que ayudan a formar seres humanos 
+                        <p>En Primaria consideramos al alumno como indagador, que aprende de forma creativa y experimental a través de las actividades y dinámicas que le permiten construir su propio significado de los conocimientos adquiridos para convertirlos en aprendizajes perdurables.</p>
+                        </p>El modelo bilingüe, mitad del día en español y mitad del día en inglés, impulsa los principios y valores que ayudan a formar seres humanos 
                         con mentalidad internacional, fortaleciendo la lengua materna y desarrollando la habilidad de comunicación a través del idioma inglés.</p>
-                        <p>La enseñanza de las <strong>TICs</strong> y <strong>Robótica</strong> <span id="dots">...</span><span id="more">permite a los alumnos obtener herramientas que fortalecen su aprendizaje a través de la indagación,
+                        <p>La enseñanza de las TICs y Robótica <span id="dots">...</span><span id="more">permite a los alumnos obtener herramientas que fortalecen su aprendizaje a través de la indagación,
                             favoreciendo la adquisición de conocimientos, habilidades, ingenio y destrezas esenciales para su vida futura.
                         <br>
                         <br>
@@ -124,7 +123,7 @@
                         Aprendiendo a interpretar y recrear sus emociones en un entorno familiar con sentido estético.
                         <br>
                         <br>
-                        <small>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</small></span> 
+                        <small>Incorporada a la SEP (Secretaría de Educación Pública) y contamos con la certificación de Bachillerato Internacional IB en el Programa de la Escuela Primaria (PEP).</small></span> 
                     </p>
                     </div>
                     
