--- a/secundaria.html
+++ b/secundaria.html
@@ -112,9 +112,9 @@
                         Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y 
                         creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, 
                         conocimientos y actitudes para la vida.</p> 
-                        <p>Hacemos énfasis en la <strong>formación colaborativa</strong>, <strong>aprendizaje por competencias</strong>,<strong> basado en retos </strong> y a través de
-                        <strong>proyectos de impacto social</strong> mediante el trabajo comunitario y el voluntariado.</p>
-                        <p>El aprendizaje de las <strong>TIC's</strong> <span id="dots">...</span><span id="more">lo promovemos a través del área de informática, trabajando con programación y manejo de bases
+                        <p>Hacemos énfasis en la formación colaborativa, aprendizaje por competencias, basado en retos  y a través de
+                        proyectos de impacto social mediante el trabajo comunitario y el voluntariado.</p>
+                        <p>El aprendizaje de las TIC's <span id="dots">...</span><span id="more">lo promovemos a través del área de informática, trabajando con programación y manejo de bases
                         de datos por medio de la plataforma virtual.
                         <br><br>
                         Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
