--- a/bachillerato.html
+++ b/bachillerato.html
@@ -105,7 +105,7 @@
             <div class="row pb-5 pt-5 d-flex align-items-center">
                 <div class="col-12 col-lg-6 text-left align-self-center">
                     <div class="text-uppercase">
-                        <small>Atrevete a vivir</small>
+                        <small>Atrévete a vivir</small>
                         <h2>Bachillerato</h2>
                     </div>
                     <div>
