cambios kinder por kindergarten

--- a/inscripciones.html
+++ b/inscripciones.html
@@ -111,7 +111,7 @@
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
                     <img src="images/Ins-kinder.png" alt="" style="max-width:100%;" class="rounded">
-                    <h3 class="font-weight-bold mt-2">Kinder</h3>
+                    <h3 class="font-weight-bold mt-2">Kindergarten</h3>
                     <div class="col-12 text-center mb-5">
                         <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos</button></a>
                     </div>
@@ -161,7 +161,6 @@
 
     <div class="text-center mt-5">
         <h1 class="text-center">CONVENIOS ANGLO</h1>
-        <!-- <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small> -->
     </div>
     
 
@@ -202,11 +201,6 @@
                 <div>
                     <p class="font-weight-normal">Escríbenos por WhatsApp y con gusto te brindaremos la información solicitada</p>
                 </div>
-                <!-- <div class="text-justify">
-                    <p>Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
-                    herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
-                    personal, universitario y profesional.</p>
-                </div> -->
                 <a href="https://wa.link/h4zyli" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block"><i class="fab fa-whatsapp fa-s fa-1x mx-3"></i>Más información</button></a>
             </div>
         </div>
