--- a/primaria.html
+++ b/primaria.html
@@ -195,7 +195,7 @@
         <section>
             <div class="container gallery-container  pt-2 pb-5">
                 <h1 class="text-center">Elementary School Life</h1>
-                <p class="page-description text-center">Momentos ANGLO</p>
+                <p class="page-description text-center">Momentos Anglo</p>
                 <div class="tz-gallery">
                     <div class="row">
                         <div class="col-md-4">
