--- a/exalumnos.html
+++ b/exalumnos.html
@@ -105,7 +105,7 @@
                         <h2>ExAnglo</h2>
                     </div>
                     <div class="text-justify">
-                        <p>La comunidad de Exalumnos del Colegio Anglo es parte importante y activa de la vida institucional, a lo largo de estos 30 años de trabajo educativo. <br> <br>
+                        <p>La Comunidad de Exalumnos del Colegio Anglo es parte importante y activa de la vida institucional, a lo largo de estos 30 años de trabajo educativo. <br> <br>
                         Los Exalumnos fortalecen la identidad e imagen del Colegio, y de igual manera, refrendan la calidad formativa que recibieron en su Alma Mater.</p>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
             <div class="container">
                 <div class="row my-4">
                     <div class="col-12 text-center">
-                        <h2>Impulsa la comunidad Anglo</h2>
+                        <h2>Impulsa la Comunidad Anglo</h2>
                         <p>Comparte tu experiencia con nosotros. Transmite tus conocimientos e impulsa a las nuevas generaciones a desarrollar nuevas habilidades y conocimientos.</p>
                         <h3>¿Aceptas el reto?</h3>
                         <p>Escríbenos a <a href="mailto: exalumnos@colegioanglo.mx">exalumnos@colegioanglo.mx</a></p>
