--- a/kindergarten.html
+++ b/kindergarten.html
@@ -116,7 +116,7 @@
                             <p> Nuestro programa bilingüe impulsa de forma natural el aprendizaje del idioma inglés y español. Mitad del día en español y mitad del día en inglés. 
                             A través de actividades divertidas en el Aula, Biblioteca y Sala de Música.</p>
                             <p>A través de la actividad física y dinámicas en el aula<span id="dots">...</span><span id="more">, los alumnos desarrollan funciones mentales como son la memoria, imaginación, 
-                            atención, desarrollo del lenguaje, formando su confianza, seguridad y autonomía.
+                            atención, desarrollo del lenguaje, fortaleciendo su confianza, seguridad y autonomía.
                             <br>
                             <br>
                             Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y autoconfianza del niño, 
