Primaria ->Robotica icono

--- a/primaria.html
+++ b/primaria.html
@@ -155,6 +155,12 @@
                         <h5 class="font-weight-bold mt-2">Computación</h5>
                     </div>
                     <!-- Grid column -->
+                      <!-- Grid column -->
+                      <div class="col-12 col-sm-6 col-lg">
+                        <img src="images/robotica.png" alt="" style="max-width:60%;">
+                        <h5 class="font-weight-bold mt-2">Robótica</h5>
+                    </div>
+                    <!-- Grid column -->
                     <!-- Grid column -->
                     <div class="col-12 col-sm-6 col-lg">
                         <img src="images/educacion-fisica.png" alt="" style="max-width:60%;">
